--- a/style.css
+++ b/style.css
@@ -84,4 +84,30 @@ a {
 
 body {
     overflow: hidden;
+    background-color: black;
+    /*
+    background-image: url('graph/star1.gif');
+    background-repeat: repeat;
+    background-size: 25%;
+    background-position: center;
+    */
+}
+
+
+.backgroundContainer {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    gap: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.sequenceImage {
+    width: 100%;
+    height: 100%;
 }
