--- a/style.css
+++ b/style.css
@@ -103,11 +103,13 @@ body {
     width: 100%;
     height: 100%;
     pointer-events: none;
-    overflow: hidden;
     z-index: -1;
+    overflow: visible;
 }
 
 .sequenceImage {
-    width: 100%;
-    height: 100%;
+    width: 150%;
+    height: 150%;
+    overflow: visible;
+    mask-image: radial-gradient(rgba(0, 0, 0, 1) 40%, rgba(0, 0, 0, 0)80%);
 }
