--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ a {
 }
 
 body {
-    overflow: hidden;
+    overflow-x: hidden;
     background-color: black;
     /*
     background-image: url('graph/star1.gif');
@@ -119,7 +119,7 @@ body {
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(5, 1fr);
     gap: 0;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     pointer-events: none;
